syntax = "proto3";
package decimal.coin.v1;

import "gogoproto/gogo.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/coin/types";

message Check {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;

  string chain_id = 1 [
    (gogoproto.customname) = "ChainID",
    (gogoproto.jsontag) = "chain_id",
    (gogoproto.moretags) = "yaml:\"chain_id\""
  ];
  string coin = 2 [
    (gogoproto.jsontag) = "coin",
    (gogoproto.moretags) = "yaml:\"coin\""
  ];
  string amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.jsontag) = "amount",
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.nullable) = false
  ];
  bytes nonce = 4 [
    (gogoproto.jsontag) = "nonce",
    (gogoproto.moretags) = "yaml:\"nonce\""
  ];
  uint64 due_block = 5 [
    (gogoproto.jsontag) = "due_block",
    (gogoproto.moretags) = "yaml:\"due_block\""
  ];
  bytes lock = 6 [
    (gogoproto.jsontag) = "lock",
    (gogoproto.moretags) = "yaml:\"lock\""
  ];
  string v = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.jsontag) = "v",
    (gogoproto.moretags) = "yaml:\"v\""
  ];
  string r = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.jsontag) = "r",
    (gogoproto.moretags) = "yaml:\"r\""
  ];
  string s = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.jsontag) = "s",
    (gogoproto.moretags) = "yaml:\"s\""
  ];
}
